--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -59,3 +59,11 @@ html(lang="en")
         $(function() {
           $('.-slide1.animated').addClass('fadeIn');
         });
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+          anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+              behavior: 'smooth'
+            });
+          });
+        });
