--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -5,7 +5,7 @@ block append vars
   -var title = page
 
 block content
-  section#servicesTop.section-services.section-banner
+  section.section-services.section-banner
     .container
       h1 What We Do?
       svg.services-banner-svg(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 1245 546')
@@ -154,7 +154,7 @@ block content
               tspan(x='63.524', y='54') intervention.
 
       p.para We help our clients to build pixel perfect and high-performance tech solutions, that lead to building teams and collaborate further to meet the goals. The aim is to help them disrupt their industries today and lead them into the future. 
-      a.scroll-down.text-white(href="javascript:void(0);")
+      a.scroll-down.text-white(href="#ourWork")
         i.icon-angle-double-down
   section#ourWork.section-services.section-content
     .container
@@ -176,7 +176,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title The Pediatric Network
@@ -193,7 +193,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title We3Health
@@ -210,7 +210,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Groupbuzz
@@ -227,7 +227,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Fundamentor
@@ -244,7 +244,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Brandscope
@@ -261,7 +261,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Phalcomm
@@ -278,7 +278,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title SimplySmart
@@ -295,7 +295,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Freedom from Diabetes
@@ -312,7 +312,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Deal Signal
@@ -329,7 +329,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top 
+                a.btn-scroll(href='#bodyTop') go to top 
           .card.card-expertise.card-work
             .card-body
               h2.card-title Swalekhan
@@ -346,7 +346,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Yumbox
@@ -363,7 +363,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Get a Limo
@@ -380,7 +380,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title SkoutDeals
@@ -397,7 +397,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top
+                a.btn-scroll(href='#bodyTop') go to top
           .card.card-expertise.card-work
             .card-body
               h2.card-title Inmate Aid
@@ -414,7 +414,7 @@ block content
                       i.align-middle.icon-arrow-right
                       | View Domains
               .scroll-top
-                a.btn-scroll(href='#servicesTop') go to top                               
+                a.btn-scroll(href='#bodyTop') go to top                               
         .btn-wrap
             a.btn.btn-gray(href="technologies.html") Technologies
             a.btn.btn-outline-gray(href="industries.html") Industries
