--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -8,9 +8,9 @@ block content
   section.section-team.section-banner
     .heading-overlay
       h1.section-heading Josh Leadership
-    a.scroll-down(href="javascript:void(0);")
+    a.scroll-down(href="#ourTeam")
       i.icon-angle-double-down
-  section.section-content.section-leadership
+  section#ourTeam.section-content.section-leadership
     .container
       .section-header
         h2.section-heading Josh Leadership
