--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -5,7 +5,7 @@
     position: relative;
     background: transparent url('#{$assets_url}images/team-banner@2x.jpg') no-repeat center center;
     background-size: cover;
-    min-height: rem(825px);
+    min-height: calc(100vh - 76px);
 
     @include media-breakpoint-down(md){
       min-height: rem(430px);
