--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -5,7 +5,7 @@ block append vars
   -var title = page
 
 block content
-  section#careerTop.section-career.section-banner
+  section.section-career.section-banner
     .banner-content
       h1 WE ARE RECRUITING
       P And you will Love working here!
@@ -48,7 +48,7 @@ block content
                   p 4+ years @ Josh
                 p.card-text Josh has done a great job of making me feel like I’m part of the team. Everyone is approachable and willing to take time out of their busy day to help each other out. I feel very empowered by—and confident in—my teammates, which makes for a great work environment.
               .scroll-top
-                a.btn-scroll(href="#careerTop") go to top
+                a.btn-scroll(href="#bodyTop") go to top
           .card.card-testimonial
             .card-body
               .pic
@@ -59,7 +59,7 @@ block content
                   p 4+ years @ Josh
                 p.card-text "I enjoy coming to work! What else one will need from their job?! Here you will find so many passionate and dedicated people around you, all eager to share their knowledge. Credit goes to superbly maintained open culture. Improving my technical and soft skills is made easy and fun!"
               .scroll-top
-                a.btn-scroll(href="#careerTop") go to top
+                a.btn-scroll(href="#bodyTop") go to top
           .card.card-testimonial
             .card-body
               .pic
@@ -70,7 +70,7 @@ block content
                   p 3+ years @ Josh
                 p.card-text Flex time, Quality work, great environment, and learning opportunities are the reasons why I enjoy coming to work!. My colleagues are very organized and easy to work with. The overall experience is really great and I am very happy to be a part of this organization!
               .scroll-top
-                a.btn-scroll(href="#careerTop") go to top
+                a.btn-scroll(href="#bodyTop") go to top
           .card.card-testimonial
             .card-body
               .pic
@@ -81,7 +81,7 @@ block content
                   p 1+ years @ Josh
                 p.card-text Josh is offering me a very good work environment. I can work on various trending technologies. My colleagues are very helpful and supportive. I am happy for being part of this organization :.)
               .scroll-top
-                a.btn-scroll(href="#careerTop") go to top
+                a.btn-scroll(href="#bodyTop") go to top
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
         a.btn.btn-outline-gray(href="contact-us.html") Contact Us
