--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -11,9 +11,9 @@ block content
           h3 IS THE WAY WE CHANGE <br>THE GAME
           a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
           p to change yours
-        a.scroll-down.text-white(href="javascript:void(0);", data-0="opacity: 1", data-490="opacity: 0")
+        a.scroll-down.text-white(href="#slide2", data-0="opacity: 1", data-490="opacity: 0")
           i.icon-angle-double-down
-        .overlay-content.-slide2
+        #slide2.overlay-content.-slide2
           h1 DISRUPT YOUR INDUSTRY
           p We partner with our clients to conceptualize and create sustainable web-based solutions, enabling high performance and growth in their businesses. We deliver business consultation to simplify technological complexities for better industry practices.
 
