--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -5,7 +5,7 @@ block append vars
   -var title = page
 
 block content
-  section#industriesTop.section-industries.section-banner
+  section.section-industries.section-banner
     .container
       ul.list-unstyled.list-industries
         li
@@ -58,9 +58,9 @@ block content
           span Finance
       h1.section-heading Industries
       p.para Our expertise lies in open source frameworks, scalable architecture and sustainable technology applications. It also includes new age technologies such as data science (statistical, analytical and predictive) and processes to build disruptive tech solutions
-      a.scroll-down.text-white(href="javascript:void(0);")
+      a.scroll-down.text-white(href="#industries")
         i.icon-angle-double-down
-  section.section-industries.section-content
+  section#industries.section-industries.section-content
     .container
       .card-wrap.-striped
         #health.card.card-expertise
@@ -69,84 +69,84 @@ block content
             img.card-img(src=asset_url + "images/health.png", alt="Health-Logo")
             p.card-text Being an industry expert in creating solutions in healthcare sector, we help in transforming the healthcare delivery and service system. With more than a decade’s experience in making a difference in the healthcare industry, we provide ground-breaking solutions to the clients and help them empower the industry. With an innate focus to innovate and deliver quality and agile services, we have revolutionised us as valuable partners for entities in healthcare industry. The efforts have created new standards of excellence from an industry disruption point of view.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #media.card.card-expertise
           .card-body
             h2.card-title Media
             img.card-img(src=asset_url + 'images/media.png', alt='Media-Logo')
             p.card-text We help our clients by providing technical expertise for text, stills, and video cuts to suggest efficient marketing and advertising concepts. Since we are living in an era of data explosion, our team has an ability to process, slice and dice data to withdraw business intelligence and insights for further experience enhancement.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #insurance.card.card-expertise
           .card-body
             h2.card-title Insurance
             img.card-img(src=asset_url + 'images/insurance.png', alt='Insurance-Logo')
             p.card-text We help our customers in developing full-fledged platforms which are today integrated with various insurance companies, to offer instant quotations to the customers. Also, we have developed a complete MIS system for live tracking the sales pertinent to vehicle insurances. Backbone is the state of the art framework for issuing policies which includes features such as gamifications to boost the agency Point of Sale (PoS).
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #sports.card.card-expertise
           .card-body
             h2.card-title Sports
             img.card-img(src=asset_url + 'images/sports.png', alt='Sports-Logo')
             p.card-text With a team of experts in developing solutions for sports sector, we have gathered enough expertise in developing technologies to enable this sector to disrupt and innovate tech solutions for offering revolutionary customer experience and sector transformation. We are geared up to take the journey ahead with newer and influential technologies such as AI, machine learning with predictive analysis, cloud infrastructure, IoT and big data.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #manufacturing.card.card-expertise
           .card-body
             h2.card-title Manufacturing
             img.card-img(src=asset_url + 'images/manufacturing.png', alt='Manufacturing-logo')
             p.card-text We help manufacturing companies and industries to identify efficiencies by applying the industry 4.0 principles and the industrial Internet of Things by transforming them into a more connected factory. Through our robust IoT framework, we thoroughly apply these methodologies to all the levels for improving the efficiency in the projects, which helps the companies to stand out from their competitors.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #education.card.card-expertise
           .card-body
             h2.card-title Education
             img.card-img(src=asset_url + 'images/education.png', alt='Education-Logo')
             p.card-text In the field of education, we develop best of services through new-age tech platforms as the demand is higher than ever. Also, we help companies which focus on education and learnings with AI-led solutions to maximize productivity, simultaneously saving time and resources in their businesses.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #tourisum.card.card-expertise
           .card-body
             h2.card-title Tourisum
             img.card-img(src=asset_url + 'images/tourisum.png', alt='Tourisum-Logo')
             p.card-text At Josh Software, we are already ahead of the curve in terms of providing that technological edge to this sector. With a team of experts in developing solutions for tourism sector. AI, machine learning with predictive analysis, cloud infrastructure, IoT and big data are going to influence this sector even more than we could ever imagine. In the past one decade, we have gathered deep expertise and have already started using these technologies to enable this sector to disrupt and innovate for revolutionalizing customer experience and sector transformation.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #finance.card.card-expertise
           .card-body
             h2.card-title Finance
             img.card-img(src=asset_url + 'images/finance.png', alt='Finance-Logo')
             p.card-text We help our partners in providing them with hassle-free web-based solutions for transactions and which further helps in acquisition and retention of customers. We build robust and fast performing online solution in limited time with deployment of shortest possible team.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #e-commerce.card.card-expertise
           .card-body
             h2.card-title E-commerce
             img.card-img(src=asset_url + 'images/e-commerce.png', alt='E-commerce-Logo')
             p.card-text We ensure that our team remains responsible to provide technical support for e-commerce sector and become a part of their ongoing developments. Our everyday efforts and understanding of the products has successfully delivered quality outputs for the clients in the markets.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #sales.card.card-expertise
           .card-body
             h2.card-title Lead Generation/Sales/Marketing
             img.card-img(src=asset_url + 'images/sales.png', alt='Sales-Logo')
             p.card-text We help our partners with highly scalable and efficient web-based solutions to revolutionize lead generation and provide holistic account based marketing goal. 
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #public-sector.card.card-expertise
           .card-body
             h2.card-title Public Sector
             img.card-img(src=asset_url + 'images/public-sector.png', alt='Public-Sector-Logo')
             p.card-text We ensure to provide technical support for public sector and become a part of their ongoing developments in improving nation-wide growth. Our understanding of the sector and merging it with useful technical back-up has successfully delivered quality outputs for the clients in the sector.
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
         #non-profit.card.card-expertise
           .card-body
             h2.card-title Non-Profit
             img.card-img(src=asset_url + 'images/non-profit.png', alt='Non-Profit-Logo')
             p.card-text When technology can do wonders, why not do it for the sector it is required for the most? With this intent, we at Josh create web-based solutions for non-for-profit sector as a social duty. We deliver scalable and agile AI-led solutions for empowering our socities. 
             .scroll-top
-              a.btn-scroll(href='#industriesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       .btn-wrap
         a.btn.btn-gray(href="services.html") Services
         a.btn.btn-outline-gray(href="technologies.html") Technologies
