--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -31,3 +31,14 @@ html(lang="en")
     block scripts
       script(src='scripts/vendors.min.js')
       script(src='scripts/scripts.js')
+      script.
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+          anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+              behavior: 'smooth', 
+              block: 'start', 
+              inline: 'start'
+            });
+          });
+        });
