--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -5,7 +5,7 @@ block append vars
   -var title = page
 
 block content
-  section#technologiesTop.section-technologies.section-banner
+  section.section-technologies.section-banner
     .container
       .svg-wrap
         svg.technologies-banner-svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.533 368.144')
@@ -163,10 +163,10 @@ block content
 
       h1.section-heading Technologies
       p.para We follow an AGILE process for delivering lightning fast go-to-market solutions. We focus on continuous delivery and ensuring a high code smell for every solution we create. Our focus is on zero downtime, real time deployment and reduced tech debt.
-      a.scroll-down.text-white(href="javascript:void(0);")
+      a.scroll-down.text-white(href="#technologies")
         i.icon-angle-double-down
 
-  section.section-technologies.section-content
+  section#technologies.section-technologies.section-content
     .container
       .card-wrap.-striped
         #iot.card.card-expertise
@@ -175,7 +175,7 @@ block content
             img.card-img(src=asset_url + 'images/iot.png',alt='IOT-Logo')
             p.card-text With the well-known benefits of AI in the world of technology, we cater to deliver robust IoT-led solutions to our clients aligned with achieving data-driven capitalism. We build simple and smart web-based and mobile-based applications for our clients from different verticals and further help them with utmost assistance and sustainable solutions.  
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #open-source.card.card-expertise
           .card-body
@@ -183,7 +183,7 @@ block content
             img.card-img(src=asset_url + 'images/opensource.png', alt='Open-Source-Logo')
             p.card-text We believe in giving back, we believe in opensource! We always try to encourage, motivate developers to get actively involve into the opensource community and contribute to various projects. Knowing that everyone needs motivation & help to upskill thier work, we always come up with new ideas like Opensource Fridays & codecuriosity.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #ai.card.card-expertise
           .card-body
@@ -191,7 +191,7 @@ block content
             img.card-img(src=asset_url + 'images/ai.png', alt='AI Logo')
             p.card-text AI in a simple definition is the ability of computers to perform tasks that otherwise takes human intelligence to do. We ensure that we are aligned with our motive of making robust solutions for clients to cater them with easier accessibility in meeting their business goal.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top 
+              a.btn-scroll(href='#bodyTop') go to top 
       
         #machine-learning.card.card-expertise
           .card-body
@@ -199,7 +199,7 @@ block content
             img.card-img(src=asset_url + 'images/machine-learning.png', alt='Machine-Learning-Logo')
             p.card-text Machine learning is a development of algorithms that provides systematic ability to automatically learn and improve from experiences without being explicitly programmed. Focuses on the development of computer programs that can access data, analyze it, learn from it.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #cloud.card.card-expertise
           .card-body
@@ -207,7 +207,7 @@ block content
             img.card-img(src=asset_url + 'images/cloud.png', alt='Cloud-logo')
             p.card-text Cloud computing has evolved business computing and software architectures into an iterative, scalable set of applications that constantly transform to meet the needs of companies and consumers. We, at Josh, help in providing simplified solutions to our clients who are in search of pre-integrated agile cloud solutions to face the complexities in business. 
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #ruby.card.card-expertise
           .card-body
@@ -215,7 +215,7 @@ block content
             img.card-img(src=asset_url + 'images/ruby.png', alt='Ruby-Logo')
             p.card-text From last 10 years, we have delivered solutions using RoR open source technology, which helps in building web applications and back-end api applications (for mobile apps) in lightening fast time period, resulting in highly maintainable & efficient systems in cost effective manner.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #go.card.card-expertise
           .card-body
@@ -223,7 +223,7 @@ block content
             img.card-img(src=asset_url + 'images/go.png', alt='Go-Logo')
             p.card-text Golang is a very powerful language when it comes to processing data at real time. Initially it helped us to parse complex excel sheets within seconds which used to take lot of time in ruby. Later we build various applications in robotics, IOT and Web app in Golang. Golang is perfect for those who want to combine both concurrency and simplycity together.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
        
         #react.card.card-expertise
           .card-body
@@ -231,7 +231,7 @@ block content
             img.card-img(src=asset_url + 'images/react.png', alt='React-Logo')
             p.card-text We provide solutions using ReactJS which is a cost effective, adhere to modern architecture which not only provide a great user experience but also helps to build maintainable & tech vivid solution for clients. React not only helps in building high performing, scalable systems in less time but also guides towards more effective and efficient solutions to the businesses.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #angular.card.card-expertise
           .card-body
@@ -239,7 +239,7 @@ block content
             img.card-img(src=asset_url + 'images/angular.png', alt='Angular-Logo')
             p.card-text AngularJs is superheroic javascript framework. It has extraordinarily expressive, readable, and quick to develop environment. We provide solutions for web, mobile web, native mobile and native desktop using  AngularJs's reusable, productive and scalable infrastructure. AngularJs frequently derives some great ideas to improve itself and this motivates us to improvise our solutions.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #android.card.card-expertise
           .card-body
@@ -247,7 +247,7 @@ block content
             img.card-img(src=asset_url + 'images/android.png', alt='Android-Logo')
             p.card-text Android is most popular mobile operating system across the globe and when it comes to architectural standard, our android app development service is best in class. We build scalable , sustainable , light weight and secured android apps that includes both phones and tablets. Also, we try and give back to the community by making contributions in various android open source packages and actively getting involved in conferences.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       
         #ios.card.card-expertise
           .card-body
@@ -255,7 +255,7 @@ block content
             img.card-img(src=asset_url + 'images/img_ios.png', alt='IOS-Logo')
             p.card-text We are one of the leading iPhone app development companies as we build secure, high performance, and engaging iPhone app solutions. With our knowledge of disrupting technology, tools, industry's best practices and designs, we intent to provide sustainable iPhone and iPad app solutions to our customers.
             .scroll-top
-              a.btn-scroll(href='#technologiesTop') go to top
+              a.btn-scroll(href='#bodyTop') go to top
       .btn-wrap
         a.btn.btn-gray(href="services.html") Services
         a.btn.btn-outline-gray(href="industries.html") Industries
