Misc ui changes

--- a/src/styles/pages/_testimonial.scss
+++ b/src/styles/pages/_testimonial.scss
@@ -2,7 +2,8 @@
 
   &.section-banner{
     min-height:rem(450px);
-    background: $roman url('#{$assets_url}images/test-banner.jpg') no-repeat center center;
+    background: $roman url('#{$assets_url}images/test-banner.jpg') no-repeat bottom center;
+    background-size: cover;
     @include flexbox();
     @include flex-direction(column);
     @include justify-content(center);
