--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -454,7 +454,7 @@ block content
                     path.svg-fill.-gray(d='M225.936,241.212a21.466,21.466,0,0,0-21.466,21.466h0a21.475,21.475,0,0,0,14.673,20.34c1.074.2,1.464-.468,1.464-1.041s0-2.2-.028-3.995c-5.964,1.3-7.229-2.526-7.229-2.526a5.683,5.683,0,0,0-2.38-3.136c-1.953-1.33.146-1.306.146-1.306a4.52,4.52,0,0,1,3.291,2.209c1.912,3.279,5.02,2.335,6.228,1.782A4.6,4.6,0,0,1,222,272.157c-4.759-.541-9.763-2.384-9.763-10.6a8.319,8.319,0,0,1,2.213-5.772,7.813,7.813,0,0,1,.212-5.7s1.8-.578,5.886,2.2a20.339,20.339,0,0,1,10.739,0c4.092-2.77,5.886-2.2,5.886-2.2a7.786,7.786,0,0,1,.216,5.7,8.283,8.283,0,0,1,2.2,5.756c0,8.238-5.02,10.04-9.8,10.577a5.112,5.112,0,0,1,1.456,3.97c0,2.848-.028,5.191-.028,5.882,0,.57.407,1.22,1.477,1.041a21.446,21.446,0,0,0-6.745-41.806Z', transform='translate(-203.97 -240.7)')
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/ashvini-vibhute@2x.jpg" alt="Ashvini Vibhute")
+            img.img-fluid(src=asset_url + "images/ashvini-vibhute@2x.jpg" alt="Ashvini Vibhute")
             .card-body
               .person-info.-nerds
                 h5 Ashvini Vibhute
@@ -512,67 +512,67 @@ block content
                 h5 Arvind Mahale
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/akshay-birajdar@2x.jpg" alt="Akshay Birajdar")
+            img.img-fluid(src=asset_url + "images/akshay-birajdar@2x.jpg" alt="Akshay Birajdar")
             .card-body
               .person-info.-nerds
                 h5 Akshay Birajdar   
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/amit-dhadse@2x.jpg" alt="Amit Dhadse")
+            img.img-fluid(src=asset_url + "images/amit-dhadse@2x.jpg" alt="Amit Dhadse")
             .card-body
               .person-info.-nerds
                 h5 Amit Dhadse
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/anuj-verma@2x.jpg" alt="Anuj Verma")
+            img.img-fluid(src=asset_url + "images/anuj-verma@2x.jpg" alt="Anuj Verma")
             .card-body
               .person-info.-nerds
                 h5 Anuj Verma
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/nikhil-mohadikar@2x.jpg" alt="Nikhil Mohadikar")
+            img.img-fluid(src=asset_url + "images/nikhil-mohadikar@2x.jpg" alt="Nikhil Mohadikar")
             .card-body
               .person-info.-nerds
                 h5 Nikhil Mohadikar
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/ninad-nehete@2x.jpg" alt="Ninad-Nehete")
+            img.img-fluid(src=asset_url + "images/ninad-nehete@2x.jpg" alt="Ninad Nehete")
             .card-body
               .person-info.-nerds
-                h5 Ninad-Nehete    
+                h5 Ninad Nehete    
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/paritosh-botre@2x.jpg" alt="Paritosh-Botre")
+            img.img-fluid(src=asset_url + "images/paritosh-botre@2x.jpg" alt="Paritosh Botre")
             .card-body
               .person-info.-nerds
-                h5 Paritosh-Botre
+                h5 Paritosh Botre
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/pinky-rout@2x.jpg" alt="Pinky Rout")
+            img.img-fluid(src=asset_url + "images/pinky-rout@2x.jpg" alt="Pinky Rout")
             .card-body
               .person-info.-nerds
                 h5 Pinky Rout
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/priyanka-yadav@2x.jpg" alt="Priyanka Yadav")
+            img.img-fluid(src=asset_url + "images/priyanka-yadav@2x.jpg" alt="Priyanka Yadav")
             .card-body
               .person-info.-nerds
                 h5 Priyanka Yadav
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/raj-kamal-lashkari@2x.jpg" alt="Raj Kamal Lashkari")
+            img.img-fluid(src=asset_url + "images/raj-kamal-lashkari@2x.jpg" alt="Raj Kamal Lashkari")
             .card-body
               .person-info.-nerds
                 h5 Raj Kamal Lashkari
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/sambhaji-karad@2x.jpg" alt="Sambhaji Karad")
+            img.img-fluid(src=asset_url + "images/sambhaji-karad@2x.jpg" alt="Sambhaji Karad")
             .card-body
               .person-info.-nerds
                 h5 Sambhaji Karad    
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src="./images/tanya-saroha@2x.jpg" alt="Tanya Saroha")
+            img.img-fluid(src=asset_url + "images/tanya-saroha@2x.jpg" alt="Tanya Saroha")
             .card-body
               .person-info.-nerds
                 h5 Tanya Saroha
