Edited:index page content

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -240,25 +240,25 @@ block content
         .about-wrap
           .stats-box
             .stats
-              h4 11+ Years
-              p Industry Experience
-            .stats
-              h4 13
-              p Countries
+              h4 11
+              p years old. since 2007.
             .stats
               h4 96
-              p Clients
+              p Clients, and counting
+            .stats
+              h4 13
+              p Countries our clients spread in.
             .stats.stats-button.d-none.d-lg-block
               a.btn.btn-outline-white(href="about-us.html") Company
           .about-banner
             img.img-fluid(src=asset_url + "images/about.png", alt="Josh Leadership")
           .stats-box
             .stats
-              h4 35+
-              p Mentored and created <br>business model for start-ups
+              h4 108
+              p years of cumulative top<br> management experience
             .stats
               h4 7
-              p Startups taken from <br> concept to funding
+              p Startups raised funding for <br> products we built for them
             .stats
               h4 60%
               p Clients that are working with us <br>for more than 5 years
