edited: index page content

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -241,7 +241,7 @@ block content
           .stats-box
             .stats
               h4 11
-              p years old. since 2007.
+              p years old, since 2007.
             .stats
               h4 96
               p Clients, and counting
