--- a/src/styles/pages/_career.scss
+++ b/src/styles/pages/_career.scss
@@ -220,6 +220,7 @@
     font-weight: 300;
     line-height: rem(20px);
     letter-spacing: 0.5px;
+    text-align: justify;
   }
 
   .scroll-top {
