--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -146,6 +146,7 @@ button:focus {
     font-weight: 300;
     line-height: rem(24px);
     letter-spacing: 1px;
+    text-align: justify;
 
     @include media-breakpoint-down(sm) {
      font-size:rem(14px);
