--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -91,6 +91,13 @@
     display: inline-block;
     left: 0;
     text-align: center;
+    
+    span{
+      padding:rem(10px) 0;
+      color: $white;
+      font-weight:100;
+      text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
+    }
 
     @include media-breakpoint-down(md) {
       left: 50%;
@@ -129,9 +136,10 @@
     }
 
     p{
-      letter-spacing: normal  ;
+      letter-spacing: 1px;
       font-weight: 300;
       margin: 0 0 rem(13px);
+      text-transform: none;
     }
   }
 
@@ -139,6 +147,7 @@
     color: $white;
     text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
     margin: 0;
+    font-weight: 100;
 
     @include media-breakpoint-down(sm) {
       font-size: rem(40px);
@@ -151,6 +160,7 @@
     text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
     margin: 0 0 rem(48px);
     line-height: rem(42px);
+    font-weight: 100;
 
     @include media-breakpoint-down(sm) {
       font-size: rem(24px);
@@ -159,19 +169,21 @@
   }
 
   .btn{
-    margin: 0 0 rem(16px);
+    margin: 0 0 rem(14px);
   }
 
   p{
-    font-size: 24px;
+    font-size: 16px;
     color: $white;
     text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
     letter-spacing: 2px;
     margin: 0 0 rem(17px);
     line-height: normal;
+    text-transform: uppercase;
+    font-weight: 100;
 
     @include media-breakpoint-down(sm) {
-      font-size: rem(18px);
+      font-size: rem(16px);
       line-height: rem(23px);
     }
   }
@@ -237,7 +249,7 @@
 
 /* Section Client */
 .section-clients {
-  background: $gray-96 url("#{$assets_url}images/home-clients-bg.jpg") repeat top center;
+  background: $gray-96;
 
   @include media-breakpoint-up(lg) {
     @include flexbox();
