--- a/src/styles/pages/_testimonial.scss
+++ b/src/styles/pages/_testimonial.scss
@@ -77,6 +77,7 @@
     margin-bottom: rem(47px);
     letter-spacing: rem(1px);
     font-weight: 300;
+    text-align: justify;
   }
 
   .para-text{
