--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -7,7 +7,9 @@ block content
     section#bannerSlide.section-home.section-overlay.bg-props(data-anchor-target='#bannerSlide')
       .container.overlay-container
         .overlay-content.-slide1.animated
-          h1.display-4 INNOVATION <br>DISRUPTION
+          h1.display-4 INNOVATION
+          span AND
+          h1.display-4.mb-4 DISRUPTION
           h3 IS THE WAY WE CHANGE <br>THE GAME
           a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
           p to change yours
