--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -579,3 +579,11 @@ block content
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
         a.btn.btn-outline-gray(href="career.html") Career
+
+block append scripts
+  script.
+    $(document).ready(function () {
+      $('html, body').animate({
+        scrollTop: $('#ourTeam').offset().top
+      }, 'slow');
+    });
