--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -151,7 +151,7 @@ button:focus {
     @include media-breakpoint-down(sm) {
      font-size:rem(14px);
      line-height: rem(21px);
-     text-align: left;
+     text-align: justify;
     }
   }
 }
