--- a/src/styles/pages/_industries.scss
+++ b/src/styles/pages/_industries.scss
@@ -34,6 +34,10 @@
       letter-spacing: 1px;
       margin: 0 0 rem(30px);
 
+      @include media-breakpoint-down(md){
+        text-align: justify;
+      }
+
       @include media-breakpoint-down(sm){
         font-size: rem(14px);
         line-height: rem(19px);
