--- a/src/styles/pages/_services.scss
+++ b/src/styles/pages/_services.scss
@@ -33,6 +33,10 @@
       letter-spacing: 0.5px;
       margin: 0 0 rem(30px);
 
+      @include media-breakpoint-down(md){
+        text-align: justify;
+      }
+
       @include media-breakpoint-down(sm){
         font-size: rem(14px);
         line-height: rem(19px);
