Fixed: index page skrollr issue

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -13,7 +13,7 @@ block content
           h3 IS THE WAY WE CHANGE <br>THE GAME
           a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
           p to change yours
-        a.scroll-down.text-white(href="#slide2", data-0="opacity: 1", data-490="opacity: 0")
+        a.scroll-down.text-white(href="#slide2")
           i.icon-angle-double-down
         #slide2.overlay-content.-slide2
           h1 DISRUPT YOUR INDUSTRY
@@ -236,7 +236,7 @@ block content
             i.align-middle.icon-arrow-right
             | View Testimonials
 
-    section#aboutSlide.section-home.section-about.bg-props(data-center='background-position: 50% 0px;', data-bottom-top='background-position: 50% -100px;', data-anchor-target='#aboutSlide')
+    section#aboutSlide.section-home.section-about.bg-props(data-center='background-position: 50% 0px;', data-bottom-top='background-position: 50% 100px;', data-anchor-target='#aboutSlide')
       .container
         h1.section-heading About Us
         .about-wrap
