--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -269,7 +269,7 @@ block content
             .stats.stats-button
               a.btn.btn-outline-white(href="team.html") Our Team
 
-    section#contactSlide.section-home.section-contact
+    section#contactSlide.section-contact
       .container
         .row
           .col-lg-6.col-md-12
