Edited: Index page banner changes

--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -74,7 +74,7 @@ html(lang="en")
           });
 
           $.scrollify({
-            section : ".section-home",
+            section : ".section-home, .section-slide",
             //- sectionName : "section-name",
             //- sectionName : false,
             //- interstitialSection : ".section-contact, .josh-footer"
