--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -4,20 +4,24 @@ block append vars
 
 block content
   #skrollr-body
-    section#bannerSlide.section-home.section-overlay.bg-props(data-anchor-target='#bannerSlide')
-      .container.overlay-container
-        .overlay-content.-slide1.animated
-          h1.display-4 INNOVATION
-          span AND
-          h1.display-4.mb-4 DISRUPTION
-          h3 IS THE WAY WE CHANGE <br>THE GAME
-          a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
-          p to change yours
-        a.scroll-down.text-white(href="#slide2")
-          i.icon-angle-double-down
-        #slide2.overlay-content.-slide2
-          h1 DISRUPT YOUR INDUSTRY
-          p We partner with our clients to conceptualize and create sustainable web-based solutions, enabling high performance and growth in their businesses. We deliver business consultation to simplify technological complexities for better industry practices.
+    section.section-overlay.bg-props
+      section#bannerSlide1.section-slide(data-anchor-target='#bannerSlide1')
+        .container.overlay-container
+          .overlay-content.-slide1.animated
+            h1.display-4 INNOVATION
+            span AND
+            h1.display-4.mb-4 DISRUPTION
+            h3 IS THE WAY WE CHANGE <br>THE GAME
+            a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
+            p to change yours
+
+          a.scroll-down.text-white(href="#slide2")
+            i.icon-angle-double-down
+      section#bannerSlide2.section-slide(data-anchor-target='#bannerSlide2')
+        .container.overlay-container
+          #slide2.overlay-content.-slide2
+            h1 DISRUPT YOUR INDUSTRY
+            p We partner with our clients to conceptualize and create sustainable web-based solutions, enabling high performance and growth in their businesses. We deliver business consultation to simplify technological complexities for better industry practices.
 
     section#expertiseSlide.section-home.section-expertise.bg-props(data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#expertiseSlide')
       .container
