Added: job-description-golang page And Edited: career page

--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -19,22 +19,21 @@ block content
         .jobs
           h4.title ROR Developer
           p.font-weight-light Experience : 3+ years
-          p.font-weight-thin Number of posts - 3
+          p.font-weight-thin Number of Posts - 5
           .btn-wrap
             a.btn.btn-outline-white(href="job-description.html") View Details
-        //=
-          .jobs
-            h4.title Golang Developer
-            p.font-weight-light Experience: minimum 3 years
-            p.font-weight-thin Number of posts - 1
-            .btn-wrap
-              a.btn.btn-outline-white(href="job-description.html") View Details
         .jobs
           h4.title React JS Developer
-          p.font-weight-light Experience: minimum 3 years
-          p.font-weight-thin Number of posts - 1
+          p.font-weight-light Experience : 2+ years
+          p.font-weight-thin Number of Posts - 3  
           .btn-wrap
             a.btn.btn-outline-white(href="job-description-react.html") View Details
+        .jobs
+          h4.title GoLang Developer
+          p.font-weight-light Experience : 2+ years
+          p.font-weight-thin Number of Posts - 2
+          .btn-wrap
+            a.btn.btn-outline-white(href="job-description-golang.html") View Details
       .testimonials-wrap
         h2.wrap-title  Testimonials
         .card-wrap.-striped
