--- a/src/views/job-description.jade
+++ b/src/views/job-description.jade
@@ -10,7 +10,7 @@ block content
       .description
         h2 ROR Developer
         p Experience : 3+ years in ROR
-        p.text-left.font-weight-normal Description
+        p.text-left.font-weight-normal Required Skills :
         ul.list-group
           li Should have worked with latest versions of ruby and rails
           li Good knowledge of working with atleast one of MySQL, PostgreSQL
@@ -22,7 +22,7 @@ block content
           li Good knowledge of deployment using mina or capistrano
           li Good knowledge of Github
         br
-        p.text-left.font-weight-normal Added advantage
+        p.text-left.font-weight-normal Good to have :
         ul.list-group
           li worked in team and experience of handling team of few members 
           li Should have good communication skills 
