updated golang JD

--- a/src/views/job-description-golang.jade
+++ b/src/views/job-description-golang.jade
@@ -15,11 +15,10 @@ block content
           li Good understanding and working experience with channels and go routines.
           li Webframeworks: either of the following: gin-gonic / beego / buffalo / mux / martini
           li Experience with development of REST APIs.
-          li Database: Either of the following: MySQL, PostGreSQL
+          li Database: Either of the following: MySQL, PostGreSQL, Mongo
         br
         p.text-left.font-weight-normal Good to have :
         ul.list-group
-          li Database: NO SQL: any of the following: mongo
           li Experience with: context package, net/http package
           li Database package: sqlx
           li Methodologies of highly performative and scaleable application design.
