--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -65,13 +65,13 @@ block content
                 i.icon-location
                 p.mb-0 JOSH SOFTWARE PVT. LTD.
                   br
-                  |A13/14 Sunflower Building, 5th Floor, 
+                  |2nd Floor, I-Space, IT Park, 
                   br
-                  |Survey No. 77/1, Mahalunge Baner Road, 
+                  |Mumbai Pune Bypass Rd
                   br
-                  |Baner, Pune - 411 045, 
+                  |Bavdhan, Pune, 
                   br
-                  |Maharashtra, India.
+                  |Maharashtra 411021
             .col-sm-8
               ul.list-inline.list-contact
                 li.contact
