--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -69,7 +69,7 @@
   @include flex-direction(column);
   height: 200vh;
   padding: 0;
-  background: $gray-10 url("#{$assets_url}images/home-banner.jpg");
+  background: $gray-10 url("#{$assets_url}images/home-banner-clear.jpeg");
 
   @include media-breakpoint-down(md) {
     height: 180vh;
@@ -97,7 +97,7 @@
 
   .overlay-content{
     position: absolute;
-    width: rem(480px);
+    width: rem(490px);
     display: inline-block;
     left: 0;
     text-align: center;
@@ -105,7 +105,7 @@
     span{
       padding:rem(10px) 0;
       color: $white;
-      font-weight: 100;
+      font-weight: 300;
       text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
 
       @include media-breakpoint-down(md) {
@@ -158,7 +158,7 @@
     color: $white;
     text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
     margin: 0;
-    font-weight: 100;
+    font-weight: 300;
 
     @include media-breakpoint-down(md) {
       font-weight: 300;
@@ -175,7 +175,7 @@
     text-shadow: 0 0 rem(16px) rgba(255, 157, 0, 1);
     margin: 0 0 rem(48px);
     line-height: rem(42px);
-    font-weight: 100;
+    font-weight: 300;
 
     @include media-breakpoint-down(md) {
       font-weight: 300;
@@ -199,7 +199,7 @@
     margin: 0 0 rem(17px);
     line-height: normal;
     text-transform: uppercase;
-    font-weight: 100;
+    font-weight: 300;
 
     @include media-breakpoint-down(md) {
       font-weight: 300;
