Added Team Members

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -524,7 +524,7 @@ block content
                 h5 Amit Dhadse
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/anuj-verma@2x.jpg" alt="Anuj Verma")
+            img.img-fluid(src=asset_url + "images/anuj-verma.jpg" alt="Anuj Verma")
             .card-body
               .person-info.-nerds
                 h5 Anuj Verma
@@ -576,6 +576,84 @@ block content
             .card-body
               .person-info.-nerds
                 h5 Tanya Saroha
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/anurag.jpg" alt="Anurag")
+            .card-body
+              .person-info.-nerds
+                h5 Anurag
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/bhagyashri.jpg" alt="Bhagyashri")
+            .card-body
+              .person-info.-nerds
+                h5 Bhagyashri
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/bhuvna.jpg" alt="Bhuvna")
+            .card-body
+              .person-info.-nerds
+                h5 Bhuvna
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/kiran-mhale.jpg" alt="Kiran-Mhale")
+            .card-body
+              .person-info.-nerds
+                h5 Kiran-Mhale
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/rahul-ojha.jpg" alt="Rahul-Ojha")
+            .card-body
+              .person-info.-nerds
+                h5 Rahul-Ojha
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/rishul.jpg" alt="Rishul")
+            .card-body
+              .person-info.-nerds
+                h5 Rishul
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/rohit.jpg" alt="Rohit")
+            .card-body
+              .person-info.-nerds
+                h5 Rohit
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/rupali.jpg" alt="Rupali")
+            .card-body
+              .person-info.-nerds
+                h5 Rupali
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/shailendra.jpg" alt="Shailendra")
+            .card-body
+              .person-info.-nerds
+                h5 Shailendra
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/shivam.jpg" alt="Shivam")
+            .card-body
+              .person-info.-nerds
+                h5 Shivam
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/suhas-more.jpg" alt="Suhas-More")
+            .card-body
+              .person-info.-nerds
+                h5 Suhas-More
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/vaibhav-kale.jpg" alt="Vaibhav-Kale")
+            .card-body
+              .person-info.-nerds
+                h5 Vaibhav-Kale
+        .col-lg-3.col-md-6.col-6
+          .card.card-team
+            img.img-fluid(src=asset_url + "images/vikas-khichar.jpg" alt="Vikas-Khichar")
+            .card-body
+              .person-info.-nerds
+                h5 Vikas-Khichar
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
         a.btn.btn-outline-gray(href="career.html") Career
