--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -52,7 +52,7 @@ block content
             .card-body
               .person-info
                 h5 Sameer Tilak
-                p.designation Director
+                p.designation Head of Engineering
               .social-media-links
                 a(href="https://www.linkedin.com/in/sameer-tilak-425a825/", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.91 43.795')
@@ -67,7 +67,7 @@ block content
             .card-body
               .person-info
                 h5 Sachin Shintre
-                p.designation Director
+                p.designation Head of Engineering
               .social-media-links
                 a(href="https://www.linkedin.com/in/shintre/", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.91 43.795')
