Added Team members pictures

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -596,16 +596,16 @@ block content
                 h5 Bhuvna
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/kiran-mhale.jpg" alt="Kiran-Mhale")
+            img.img-fluid(src=asset_url + "images/kiran-mhale.jpg" alt="Kiran Mhale")
             .card-body
               .person-info.-nerds
-                h5 Kiran-Mhale
+                h5 Kiran Mhale
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/rahul-ojha.jpg" alt="Rahul-Ojha")
+            img.img-fluid(src=asset_url + "images/rahul-ojha.jpg" alt="Rahul Ojha")
             .card-body
               .person-info.-nerds
-                h5 Rahul-Ojha
+                h5 Rahul Ojha
         .col-lg-3.col-md-6.col-6
           .card.card-team
             img.img-fluid(src=asset_url + "images/rishul.jpg" alt="Rishul")
@@ -626,10 +626,10 @@ block content
                 h5 Rupali
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/shailendra.jpg" alt="Shailendra")
+            img.img-fluid(src=asset_url + "images/shailendra.jpg" alt="Shailendra Kanherkar")
             .card-body
               .person-info.-nerds
-                h5 Shailendra
+                h5 Shailendra Kanherkar
         .col-lg-3.col-md-6.col-6
           .card.card-team
             img.img-fluid(src=asset_url + "images/shivam.jpg" alt="Shivam")
@@ -638,22 +638,22 @@ block content
                 h5 Shivam
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/suhas-more.jpg" alt="Suhas-More")
+            img.img-fluid(src=asset_url + "images/suhas-more.jpg" alt="Suhas More")
             .card-body
               .person-info.-nerds
-                h5 Suhas-More
+                h5 Suhas More
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/vaibhav-kale.jpg" alt="Vaibhav-Kale")
+            img.img-fluid(src=asset_url + "images/vaibhav-kale.jpg" alt="Vaibhav Kale")
             .card-body
               .person-info.-nerds
-                h5 Vaibhav-Kale
+                h5 Vaibhav Kale
         .col-lg-3.col-md-6.col-6
           .card.card-team
-            img.img-fluid(src=asset_url + "images/vikas-khichar.jpg" alt="Vikas-Khichar")
+            img.img-fluid(src=asset_url + "images/vikas-khichar.jpg" alt="Vikas Khichar")
             .card-body
               .person-info.-nerds
-                h5 Vikas-Khichar
+                h5 Vikas Khichar
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
         a.btn.btn-outline-gray(href="career.html") Career
