team page changes

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -94,7 +94,7 @@ block content
 
         .col-lg-4.col-sm-6
           .card.card-team
-            img.img-fluid(src="images/core-vaibhavi@2x.jpg" alt="Vaibhavi")
+            img.img-fluid(src=asset_url + "images/core-vaibhavi@2x.jpg" alt="Vaibhavi")
             .card-body
               .person-info
                 h5 Vaibhavi
@@ -102,7 +102,7 @@ block content
 
         .col-lg-4.col-sm-6
           .card.card-team
-            img.img-fluid(src="images/core-sundari@2x.jpg" alt="Sundari")
+            img.img-fluid(src=asset_url + "images/core-sundari@2x.jpg" alt="Sundari")
             .card-body
               .person-info
                 h5 Sundari
