--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -1,11 +1,11 @@
 /* icons */
 @font-face {
   font-family: 'josh-icons';
-  src: url('../fonts/josh-icons.eot?vapxsj');
-  src: url('../fonts/josh-icons.eot?vapxsj#iefix') format('embedded-opentype'),
-  url('../fonts/josh-icons.ttf?vapxsj') format('truetype'),
-  url('../fonts/josh-icons.woff?vapxsj') format('woff'),
-  url('../fonts/josh-icons.svg?vapxsj#josh-icons') format('svg');
+  src: url('../fonts/josh-icons.eot?3loxio');
+  src: url('../fonts/josh-icons.eot?3loxio#iefix') format('embedded-opentype'),
+  url('../fonts/josh-icons.ttf?3loxio') format('truetype'),
+  url('../fonts/josh-icons.woff?3loxio') format('woff'),
+  url('../fonts/josh-icons.svg?3loxio#josh-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -87,6 +87,14 @@
 
 .icon-arrow-up:before {
   content: "\e90f";
+}
+
+.icon-linkedin:before {
+  content: "\e910";
+}
+
+.icon-github:before {
+  content: "\e911";
 }
 
 /* icons end */
